base/apps/misskey/mk.xiupos.net/service-ingress.yml
# service
apiVersion: v1
kind: Service
metadata:
  name: misskey
  namespace: misskey-mk-xiupos-net
spec:
  selector:
    app: misskey
  ports:
    - port: 3000
      targetPort: 3000

---
# s3 redirect for old files
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-files
  namespace: misskey-mk-xiupos-net
spec:
  redirectRegex:
    regex: "^https?://[^/]+/files/(.*)"
    replacement: https://mk-s3.xiupos.net/files/${1}
    permanent: false

---
# ingress
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: misskey-ingress
  namespace: misskey-mk-xiupos-net
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mk.xiupos.net`)
      kind: Rule
      middlewares:
        - name: redirect-files
      services:
        - name: misskey
          port: 3000
